--- a/PTUDDD-main/app/src/main/AndroidManifest.xml
+++ b/PTUDDD-main/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:name=".activities.MainActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="false" />
+        <activity
+            android:name=".activities.DangkyActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:exported="false" />
     </application>
 
 </manifest>
